<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/rl_color_header"
    android:gravity="center_vertical"
    android:layout_centerHorizontal="true"
    android:background="@drawable/side_nav_bar"
    android:layout_height="@dimen/nav_header_height">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="@dimen/dim_90"
        android:layout_height="@dimen/dim_90"
        android:layout_marginLeft="@dimen/dim_30"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginBottom="@dimen/dim_10"
        android:layout_toRightOf="@+id/iv_profile_image"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_toRightOf="@+id/iv_profile_image"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv_username"
        android:layout_marginLeft="@dimen/dim_15"
        android:layout_marginBottom="@dimen/dim_10"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:id="@+id/tv_wallet_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginBottom="@dimen/dim_10"
        android:layout_toRightOf="@+id/iv_profile_image"
        android:text="@string/nav_header_wallet_balance"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_wallet_balance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_wallet_balance"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginBottom="@dimen/dim_10"
        android:layout_toRightOf="@+id/iv_profile_image"
        android:text="@string/Rs"
        android:textColor="#000000"
        android:textStyle="bold" />
</RelativeLayout>
<View
    android:layout_width="match_parent"
    android:id="@+id/view_seperator"
    android:layout_below="@+id/rl_color_header"
    android:background="#000000"
    android:layout_height="@dimen/dim_1"></View>
<LinearLayout
    android:layout_width="match_parent"
    android:weightSum="2"
    android:layout_below="@+id/view_seperator"
    android:orientation="horizontal"
    android:id="@+id/ll_customer_details"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/event_total"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/event_total_value"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="@dimen/dim_1"
        android:id="@+id/view_seperator_value_cus"
        android:background="#000000"
        android:layout_height="match_parent"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/event_amount_won"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/event_amount_won_value"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
    <!--@+id/ll_customer_details-->
    <View
        android:layout_width="match_parent"
        android:id="@+id/view_seperator_value"
        android:layout_below="@+id/ll_customer_details"
        android:background="#000000"
        android:layout_height="@dimen/dim_1"></View>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_below="@+id/view_seperator_value"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:layout_height="match_parent"

        />


</RelativeLayout>
