<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:background="@drawable/logo"
    android:layout_width="match_parent"
   android:layout_centerInParent="true"
    android:layout_height="@dimen/dim_250"
    android:layout_margin="@dimen/dim_15"
    android:elevation="3dp"
    card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:id="@+id/tv_contact_number"
    android:layout_gravity="center"
    android:gravity="center"
    android:textColor="#000000"
    android:layout_marginTop="@dimen/dim_10"
    android:text="@string/contact_admin_email"
    android:layout_height="wrap_content" />
<TextView
    android:layout_width="match_parent"
    android:id="@+id/tv_contact_number_value"
    android:layout_gravity="center"
    android:textColor="#000000"
    android:gravity="center"
    android:layout_marginTop="@dimen/dim_10"
    android:text="@string/contact_contact_number"
    android:layout_height="wrap_content" />
<TextView
    android:layout_width="match_parent"
    android:id="@+id/tv_contact_address"
    android:layout_gravity="center"
    android:gravity="center"
    android:textColor="#000000"
    android:layout_marginTop="@dimen/dim_10"
    android:text="@string/contact_contact_address"
    android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>